--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li><a href="">Proyectos</a></li>
                     <li class="miCorreo"><a href="">danibelgranocab@hotmail.com</a></li>
                 </ul>
+                <a href=""><img src="files/email.svg" alt=""></a>
             </nav>
         </div>
     </header>
