--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/sectionPresentation.css">
     <link rel="stylesheet" href="css/sectionSobreMi.css">
+    <link rel="stylesheet" href="css/skillsAndHobbies.css">
 </head>
 
 <body>
@@ -74,15 +75,67 @@
 
     <section id="sectionTwo" class="blueLight">
         <article>
-        <h3>Sobre mi</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sem tellus. Nulla tincidunt tristique
-            dui, vel dictum dolor lacinia id. Curabitur semper nisi ultrices tempus auctor. Mauris gravida congue
-            scelerisque. Fusce eu sagittis nibh, at vestibulum nunc. Duis gravida sodales odio finibus dignissim. </p>
-        <p>Sed ut urna pretium, placerat ipsum nec, ultrices urna. Vestibulum ante ipsum primis in faucibus orci luctus
-            et ultrices posuere cubilia curae; Etiam sit amet libero eget arcu lacinia auctor. Aliquam a justo sed
-            tortor feugiat egestas. Praesent non ex cursus, blandit lectus nec, rhoncus dolor. Sed non mattis erat.</p>
-        <img src="files/firma.png" alt="imagen de la firma">
-    </article>
+            <h3>Sobre mi</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a sem tellus. Nulla tincidunt tristique
+                dui, vel dictum dolor lacinia id. Curabitur semper nisi ultrices tempus auctor. Mauris gravida congue
+                scelerisque. Fusce eu sagittis nibh, at vestibulum nunc. Duis gravida sodales odio finibus dignissim.
+            </p>
+            <p>Sed ut urna pretium, placerat ipsum nec, ultrices urna. Vestibulum ante ipsum primis in faucibus orci
+                luctus
+                et ultrices posuere cubilia curae; Etiam sit amet libero eget arcu lacinia auctor. Aliquam a justo sed
+                tortor feugiat egestas. Praesent non ex cursus, blandit lectus nec, rhoncus dolor. Sed non mattis erat.
+            </p>
+            <img src="files/firma.png" alt="imagen de la firma">
+        </article>
+    </section>
+
+    <section id="sectionSkills">
+        <h3>Skills</h3>
+
+        <article class="tarjetas">
+            
+            <div class="tarjeta">
+                <div class="info-tarjeta">
+                    <img src="files/icon-html.svg" alt="">
+                    <h4>HTML 5</h4>
+                </div>
+            </div>
+
+            <div class="tarjeta">
+                <div class="info-tarjeta">
+                    <img src="files/icon-css.svg" alt="">
+                    <h4>Css</h4>
+                </div>
+            </div>
+
+            <div class="tarjeta">
+                <div class="info-tarjeta">
+                    <img src="files/icon-js.svg" alt="">
+                    <h4>JavaScript</h4>
+                </div>
+            </div>
+
+            <div class="tarjeta">
+                <div class="info-tarjeta">
+                    <img src="files/icon-java.svg" alt="">
+                    <h4>Java</h4>
+                </div>
+            </div>
+
+            <div class="tarjeta">
+                <div class="info-tarjeta">
+                    <img src="files/icon-angular.svg" alt="">
+                    <h4>Angular</h4>
+                </div>
+            </div>
+
+            <div class="tarjeta">
+                <div class="info-tarjeta">
+                    <img src="files/icon-nodejs.svg" alt="">
+                    <h4>Node JS</h4>
+                </div>
+            </div>
+        </article>
     </section>
 </body>
 
