--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </article>
 
         <aside>
-            <img src="files/beagle.jpg" alt="Foto de perfil">
+            <img src="files/me.jpg" alt="Foto de perfil">
         </aside>
 
 
